force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__IT_Stage_Environment_Ready__c.field-meta.xml
<CustomField>
    <fullName>agf__IT_Stage_Environment_Ready__c</fullName>
    <description>IT Feature Freeze Criteria to ensure the Stage environment is prepared and ready for the Release Sprint/UAT.</description>
    <inlineHelpText>All 4 swimlanes for the solution are built and utilized (dev, test, stage, prod).  Dev/Test must be part of Sprint.  Stage must be used for UAT.</inlineHelpText>
    <label>IT Stage Environment Ready</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>