force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__LINK_to_S1_Chatter_Group__c.field-meta.xml
<CustomField>
    <fullName>agf__LINK_to_S1_Chatter_Group__c</fullName>
    <description>Point people to the main Chatter Group where they can ask questions or find links to important information (e.g. the current S1 Support Matrix).</description>
    <formula>HYPERLINK(&apos;https://gus.my.salesforce.com/0F9B0000000068B&apos;,&apos;Click to find Current S1 Support Matrix&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Links you to the best place to ask questions or find important information, like the S1 Support Matrix for the current release.</inlineHelpText>
    <label>LINK to S1 Chatter Group</label>
    <type>Text</type>
</CustomField>