force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__New_Services_Requiring_Monitoring__c.field-meta.xml
<CustomField>
    <fullName>agf__New_Services_Requiring_Monitoring__c</fullName>
    <description>Any new services that need monitoring turned on?</description>
    <inlineHelpText>Any new services that need monitoring turned on?</inlineHelpText>
    <label>New Services Requiring Monitoring</label>
    <type>TextArea</type>
</CustomField>