force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__No_Open_P0_Bugs_at_FF__c.field-meta.xml
<CustomField>
    <fullName>agf__No_Open_P0_Bugs_at_FF__c</fullName>
    <description>IT Feature Freeze Criteria.  No Open P0 Bugs allowed at Feature Freeze.</description>
    <inlineHelpText>P1/P2&apos;s must be noted as exceptions and explained at WRoR.</inlineHelpText>
    <label>No Open P0 Bugs at FF</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>