force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__No_Regressions_on_the_Freeze_Branch__c.field-meta.xml
<CustomField>
    <fullName>agf__No_Regressions_on_the_Freeze_Branch__c</fullName>
    <description>There are no Regressions on the Freeze Branch.</description>
    <inlineHelpText>There are no Regressions on the Freeze Branch.</inlineHelpText>
    <label>No Regressions on the Freeze Branch</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>False</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>