force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__Num_P1_P2_Bugs_Test_Failures_1_week_old__c.field-meta.xml
<CustomField>
    <fullName>agf__Num_P1_P2_Bugs_Test_Failures_1_week_old__c</fullName>
    <inlineHelpText>Number of P1/P2 Bugs or Test Failures &gt; 1 week old.  FF criterion is 0.</inlineHelpText>
    <label>Num P1/P2 Bugs/TF &gt;1 wk old (0)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>