force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__Num_P1_P2_Bugs_Test_Failures_to_Verify__c.field-meta.xml
<CustomField>
    <fullName>agf__Num_P1_P2_Bugs_Test_Failures_to_Verify__c</fullName>
    <inlineHelpText>Number of P1/P2 Bugs and Test Failures to Verify</inlineHelpText>
    <label>Num P1/P2 Bugs/Test Failures to Verify</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>