force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__Number_of_Automated_CBS_5__c.field-meta.xml
<CustomField>
    <fullName>agf__Number_of_Automated_CBS_5__c</fullName>
    <inlineHelpText>Number of automated Complex Business Scenarios.  FF criterion is at least 5.</inlineHelpText>
    <label>Number of Automated CBS (&gt;=5)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>