force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__Number_of_Bugs_TF_to_Fix_max_2_Dev__c.field-meta.xml
<CustomField>
    <fullName>agf__Number_of_Bugs_TF_to_Fix_max_2_Dev__c</fullName>
    <description>Total Number of Bugs/TF to Fix (maximum 2 per Full-Time Developer)</description>
    <inlineHelpText>Total Number of Bugs/TF to Fix (maximum 2 per Full-Time Developer)</inlineHelpText>
    <label>Number of Bugs/TF to Fix (max 2/Dev)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>