force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__Number_of_Bugs_to_Fix_max_1_Dev__c.field-meta.xml
<CustomField>
    <fullName>agf__Number_of_Bugs_to_Fix_max_1_Dev__c</fullName>
    <description>Total Number of Bugs to Fix (maximum 1 per Full-Time Developer)</description>
    <inlineHelpText>Total Number of Bugs to Fix (maximum 1 per Full-Time Developer)</inlineHelpText>
    <label>Number of Bugs to Fix (max 1/Dev)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>