force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__Number_of_Bugs_to_Verify_max_1_QE__c.field-meta.xml
<CustomField>
    <fullName>agf__Number_of_Bugs_to_Verify_max_1_QE__c</fullName>
    <description>Total Number of Fixed Bugs to Verify (maximum 1 per Full-Time QE)</description>
    <inlineHelpText>Total Number of Fixed Bugs to Verify (maximum 1 per Full-Time QE)</inlineHelpText>
    <label>Number of Bugs to Verify (max 1/QE)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>