force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__Number_of_Open_Feature_Requests__c.field-meta.xml
<CustomField>
    <fullName>agf__Number_of_Open_Feature_Requests__c</fullName>
    <description>Number of open feature requests scheduled for this release.</description>
    <inlineHelpText>Number of open feature requests scheduled for this release.  FF criterion is 0.</inlineHelpText>
    <label>Number of Open Feature Requests (0)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>