force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__Number_of_Test_Failures__c.field-meta.xml
<CustomField>
    <fullName>agf__Number_of_Test_Failures__c</fullName>
    <description>Number of open Ftest failures.</description>
    <inlineHelpText>Number of open Ftest failures.</inlineHelpText>
    <label>Number of Ftest Failures</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>