force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__Number_of_TF_to_Fix_or_Verify_1week_0__c.field-meta.xml
<CustomField>
    <fullName>agf__Number_of_TF_to_Fix_or_Verify_1week_0__c</fullName>
    <description>Total Number of TF to Fix or Verify &gt;1 week old (0)</description>
    <inlineHelpText>Total Number of TF to Fix or Verify &gt;1 week old (0)</inlineHelpText>
    <label>Number of TF to Fix or Verify &gt;1week (0)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>