force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__Open_Accessibility_Bugs__c.field-meta.xml
<CustomField>
    <fullName>agf__Open_Accessibility_Bugs__c</fullName>
    <inlineHelpText>Does your team have any open Accessibility bugs?</inlineHelpText>
    <label>Open Accessibility Bugs</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>No Applicable UI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>