force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__Performance_Engineering_Requirements_Met__c.field-meta.xml
<CustomField>
    <fullName>agf__Performance_Engineering_Requirements_Met__c</fullName>
    <description>The Performance Engineering requirements have been met.</description>
    <inlineHelpText>The Performance Engineering requirements have been met.</inlineHelpText>
    <label>Performance Engineering Requirements Met</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>False</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>