force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__Provide_behind_perm_details__c.field-meta.xml
<CustomField>
    <fullName>agf__Provide_behind_perm_details__c</fullName>
    <inlineHelpText>Provide details explaining how a perm is used to disable incomplete features.</inlineHelpText>
    <label>Provide details on your features perm</label>
    <type>TextArea</type>
</CustomField>