force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__Provide_Details_for_one_app_Testing__c.field-meta.xml
<CustomField>
    <fullName>agf__Provide_Details_for_one_app_Testing__c</fullName>
    <description>Used for details around if a team has not completed their testing of the supported one.app browsers.  Only needed if &quot;No&quot; is selected.</description>
    <inlineHelpText>Provide details if &quot;No&quot; is selected for the &quot;All supported one.app browsers tested&quot; field.</inlineHelpText>
    <label>Provide Details for one.app Testing</label>
    <type>TextArea</type>
</CustomField>