force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__Provide_Details_for_Scale_Impact__c.field-meta.xml
<CustomField>
    <fullName>agf__Provide_Details_for_Scale_Impact__c</fullName>
    <inlineHelpText>Provide details if Scale Impact is not documented.</inlineHelpText>
    <label>Provide Details for Scale Impact</label>
    <type>TextArea</type>
</CustomField>