force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__Provide_details_if_SO_not_created__c.field-meta.xml
<CustomField>
    <fullName>agf__Provide_details_if_SO_not_created__c</fullName>
    <inlineHelpText>FF Criteria: Feature Enablement must be detailed in Solutions Overview (SO)</inlineHelpText>
    <label>Provide details if SO not created</label>
    <type>TextArea</type>
</CustomField>