force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__Provide_details_on_open_P012_Bugs__c.field-meta.xml
<CustomField>
    <fullName>agf__Provide_details_on_open_P012_Bugs__c</fullName>
    <inlineHelpText>FF Criteria: All P012 bugs CLOSED</inlineHelpText>
    <label>Provide details on open P012 Bugs</label>
    <type>TextArea</type>
</CustomField>