force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__Provide_details_on_open_Security_bugs__c.field-meta.xml
<CustomField>
    <fullName>agf__Provide_details_on_open_Security_bugs__c</fullName>
    <inlineHelpText>FF Criteria: All P01 Security bugs and P2 Security bugs that are &gt; 120 days old CLOSED</inlineHelpText>
    <label>Provide details on open Security bugs</label>
    <type>TextArea</type>
</CustomField>