force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__Provide_open_Accessibility_bug_details__c.field-meta.xml
<CustomField>
    <fullName>agf__Provide_open_Accessibility_bug_details__c</fullName>
    <inlineHelpText>FF Criteria: All bugs &gt; 45 days closed; RF Criteria: All bugs closed</inlineHelpText>
    <label>Provide open Accessibility bug details</label>
    <type>TextArea</type>
</CustomField>