force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__Provide_other_team_dependencies_details__c.field-meta.xml
<CustomField>
    <fullName>agf__Provide_other_team_dependencies_details__c</fullName>
    <inlineHelpText>Provide details on the status of dependencies on other teams.</inlineHelpText>
    <label>Provide details on open dependencies</label>
    <type>TextArea</type>
</CustomField>