force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__QE_Leadership_Confirmation_Details__c.field-meta.xml
<CustomField>
    <fullName>agf__QE_Leadership_Confirmation_Details__c</fullName>
    <label>QE Leadership Confirmation Details</label>
    <type>TextArea</type>
</CustomField>