force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Feature_Freeze_Status__c/fields/agf__QE_Leadership_Sign_Off_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>agf__QE_Leadership_Sign_Off_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Used by QE Leader responsible for confirming team signoff.</inlineHelpText>
    <label>QE Leadership Sign Off Confirmed</label>
    <type>Checkbox</type>
</CustomField>